--- a/TRS01_Pandas.ipynb
+++ b/TRS01_Pandas.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJ2POfSPIU4ic0DPrh699X",
+      "authorship_tag": "ABX9TyNQ7xpVSuzWvrqDHAN3rNCx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,7 +189,7 @@
       "source": [
         "## Data exploration\n",
         "\n",
-        "It is very boring working with such a small DataFrame. Let's upload a DataSet form a CVS file.\n"
+        "It is very boring working with such a small DataFrame. Let's upload a DataSet form a CSV file.\n"
       ],
       "metadata": {
         "id": "kyVm-gUKxQgh"
