--- a/TRS06_Reg_real_example.ipynb
+++ b/TRS06_Reg_real_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsOodiBdx87Rvvq7/ftks0",
+      "authorship_tag": "ABX9TyPnHFILUdeoKI9djL9S6fT2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,7 +179,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = LinearRegression()\n",
+        "model =\n",
         "model.fit(xtrain, ytrain)"
       ],
       "metadata": {
