--- a/TRS14_DenseNetwork_keras.ipynb
+++ b/TRS14_DenseNetwork_keras.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNo6EV5VTSpvMXVmgXRh7qy",
+      "authorship_tag": "ABX9TyMgt6LcBMosKTmBre6T4T7L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,16 +60,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Paquetería básica\n",
+        "# Basic modules\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Importamos Tensorflow y Keras\n",
+        "# Import tensorflow and keras\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "\n",
-        "# Usamos funcionalidades básicas de Sklearn\n",
+        "# Some basic funcionalities from sklearn\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler"
       ],
